--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI="mongodb://localhost:27017/test"
 RESEND_API_KEY="re_CSBNLDax_3mfvUwLGut2GhF9RV1sa2qc1"
+NEXT_AUTH_SECRET="This is my secret key"
+GOOGLE_CLIENT_ID="1047421551917-ca77m5bq7vqs8iap65kne2muq56lkq0d.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
