--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "resend": "^3.2.0",
+    "styled-components": "^6.1.11",
     "zod": "^3.23.8"
   },
   "devDependencies": {
