--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.19",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
