--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@react-email/components": "^0.0.19",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -17,6 +18,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "resend": "^3.2.0",
     "styled-components": "^6.1.11",
     "zod": "^3.23.8"
