--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb://localhost:27017/test"
+MONGO_URI="mongodb://localhost:27017/matrimony"
 RESEND_API_KEY="re_LAAsVBN8_5dxBpTrp6wJeDyjMqZAhfCeR"
 NEXT_AUTH_SECRET="This is my secret key"
 GOOGLE_CLIENT_ID="1047421551917-ca77m5bq7vqs8iap65kne2muq56lkq0d.apps.googleusercontent.com"
